# super-bassoon

./: .gitignore  LICENSE  README.md  litellm.py  paperless.py  pyproject.toml
.github/workflows/: pylint.yml
prompts/: receipt.txt
src/super-bassoon/: consumer.py  embedder.py  litellm.py  llmproxy.py  main.py  main2.py  op.py  paperless.py  producer.py  qdrant.py  querier.py  retriever.py  vectordb.py
src/super-bassoon/models/: base.py  document.py  jsonfield.py
src/super-bassoon/prompts/: receipt.txt
src/super-bassoon/prompts/extraction/: receipt.txt
src/super-bassoon/prompts/query/classify/: receipt.txt
src/super-bassoon/schemas/: receipt.txt
src/super_bassoon/: embedder.py  llmproxy.py  otel.py  paperless.py  querier.py  retriever.py  vectordb.py
src/super_bassoon/models/: __init__.py  base.py  document.py  point.py
src/super_bassoon/prompts/query/classify/: receipt.txt
tests/: classification_report.md  results.md  test_query_classifier.py  test_run.py
