[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-bassoon"
version = "0.1.0"
description = "Utilities for interacting with PaperlessNGX and LiteLLM for receipt extraction and review."
readme = "README.md"
authors = [{name = "Derek Chang"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests",
    "qdrant-client",
    "litellm",
    "peewee",
    "rapidfuzz",
    "aiohttp"
]

[project.scripts]
super-bassoon = "super_bassoon.main:main"